refactor: Worktree 子域 DDD 分层重构(M1)
- app/WorktreeService(818行)拆为 app/worktree/WorktreeAppService 纯编排
- git 子进程方言下沉 infra/git/ProcessGitWorktreeGateway, FS 副作用下沉 LocalWorktreeFileGateway
- 端口 GitWorktreeGateway/WorktreeFileGateway 定义在 app/worktree
- 分支净化与桶内防穿越收敛为 domain WorktreeDirName VO; 私有 ref 判定收口 UserBranchRef.isNamespaced
- 裸 Map 返回替换为类型化 View record(@JsonInclude NON_NULL 保持 JSON 契约不变)
- 测试按金字塔重排: 域名 VO 单测 + infra 进程原语测试 + 真 git 集成 + MVC 切片
- 验证: mvn test 1191 全绿; git-integration 26 全绿; e2e worktree.spec.ts 通过; pmd:check 通过